2004-07-08  Maciej W. Rozycki  <macro@linux-mips.org>

	* ld-mips-elf/reloc-merge-lo16.{s,d,ld}: New test.
	* ld-mips-elf/mips-elf.exp: Run it.

2004-07-02  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-elf/frame.exp: Don't run on sh*-*-elf*.
	* ld-sh/shared-1.d: Adjust for section reordering changes.
	* ld-sh/shared-2.d: Likewise.
	* ld-sh/tlsbin-2.d: Likewise.
	* ld-sh/tlspic-2.d: Likewise.
	* ld-sh/sh64/abi32.xd: Likewise.
	* ld-sh/sh64/abi64.xd: Likewise.
	* ld-sh/sh64/cmpct1.xd: Likewise.
	* ld-sh/sh64/crange1.rd: Likewise.
	* ld-sh/sh64/crange2.rd: Likewise.
	* ld-sh/sh64/crange3-cmpct.rd: Likewise.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/gotplt.d: Likewise.
	* ld-sh/sh64/init-cmpct.d: Likewise.
	* ld-sh/sh64/init-media.d: Likewise.
	* ld-sh/sh64/init64.d: Likewise.
	* ld-sh/sh64/mix1.xd: Likewise.
	* ld-sh/sh64/mix2.xd: Likewise.
	* ld-sh/sh64/shdl32.xd: Likewise.
	* ld-sh/sh64/shdl64.xd: Likewise.

2004-07-02  Alan Modra  <amodra@bigpond.net.au>

	* ld-discard/static.d: Accept both original sym and section sym.

2004-07-01  Jakub Jelinek  <jakub@redhat.com>

	* ld-sparc/tlssunpic32.rd: Adjust for section reordering changes
	and removal of unneeded STT_SECTION symbols from .dynsym.
	* ld-sparc/tlssunbin32.rd: Likewise.
	* ld-sparc/tlssunpic32.dd: Likewise.
	* ld-sparc/tlssunpic32.sd: Likewise.
	* ld-sparc/tlssunbin32.dd: Likewise.
	* ld-sparc/tlssunbin32.sd: Likewise.
	* ld-sparc/tlssunbin32.td: Likewise.

2004-07-01  Alan Modra  <amodra@bigpond.net.au>

	* ld-discard/extern.d: Update.
	* ld-discard/start.d: Update.
	* ld-discard/static.d: Update.

2004-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR 233
	* ld-discard/extern.d: Updated.
	* ld-discard/start.d: Likewise.
	* ld-discard/static.d: Likewise.

2004-06-29  J"orn Rennecke <joern.rennecke@superh.com>

	Actually add these files:
	2004-05-28  Andrew Stubbs <andrew.stubbs@superh.com>
	* testsuite/ld-sh/arch/arch.exp: New test script.