@@ -31,6 +31,7 @@ if {[istarget *-elf]} {
     run_dump_test relax-3
     run_dump_test relax-4
     run_dump_test relax-5
+    run_dump_test gcsection	
 } else {
     run_dump_test relax-3-coff
     run_dump_test relax-4-coff
